tests/snapshots/lexer/lexer_00_single_line__harness__lexer__single_line_comment_stream.snap
---
source: tests/harness/lexer.rs
expression: self.tokens
---
[
    Ident(
        "x",
    ),
    Assign,
    Number(
        10.0,
    ),
    Floor,
    Ident(
        "this",
    ),
    Is,
    Ident(
        "a",
    ),
    Ident(
        "comment",
    ),
    EOF,
]
