tests/snapshots/lexer/lexer_00_single_line__harness__lexer__single_line_stream.snap
---
source: tests/harness/lexer.rs
expression: self.tokens
---
[
    Ident(
        "x",
    ),
    Assign,
    Number(
        10.0,
    ),
    Ident(
        "y",
    ),
    Assign,
    Number(
        20.0,
    ),
    EOF,
]
